# rockchip-tool

./: .gitignore  CMakeLists.txt  README.md  afptool.cpp  download_images.sh  img_maker.cpp  img_pack.cpp  img_unpack.cpp  rkafp.h  rkcrc.cpp  rkkernel.cpp  rkrom.h
